# goodreads-to-kindle

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  example_env_file  pyproject.toml  requirements.txt
goodreads_to_kindle/: aa.py  book_provider.py  constants.py  crawl.py  exceptions.py  mail.py  main.py  models.py  query.py  repository.py  settings.py  utils.py
goodreads_to_kindle/goodreads_scraper/: LICENSE  README.md  crawl.py  custom_filters.py  items.py  middlewares.py  pipelines.py  settings.py
goodreads_to_kindle/goodreads_scraper/spiders/: author_spider.py  book_spider.py  list_spider.py  mybooks_spider.py
